--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 
+task wrapper(type: Wrapper) { gradleVersion = '2.14' }
+
 repositories { mavenCentral() }
 dependencies {
   testCompile 'junit:junit:4.+'
